--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>projeto de vida 3B</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Projeto 3B</title>
 </head>
 <body>
-    
+<header>
+    <h1 class="tit-1">Projeto 1</h1>
+    <li>Item 1</li>
+    <li>Item 2</li>
+    <li>Item 3</li>
+    <h2>Projeto 2</h2>
+    <h3>Projeto 3</h3>
+</header>
+<button>Projeto 1</button>
+<button>Projeto 2</button>
+<button>Projeto 3</button>
 </body>
 </html>
