--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 <body>
 <header>
     <h1 class="tit-1">Projeto 1</h1>
+ <ul>
     <li>Item 1</li>
     <li>Item 2</li>
     <li>Item 3</li>
+  </ul>
     <h2>Projeto 2</h2>
     <h3>Projeto 3</h3>
+    <h4>Projeto 4</h4>
 </header>
-<button>Projeto 1</button>
-<button>Projeto 2</button>
-<button>Projeto 3</button>
+<button>item 1</button>
+<button>item 2</button>
 </body>
 </html>
