--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h3>Projeto 3</h3>
     <h4>Projeto 4</h4>
 </header>
-<button>item 1</button>
+<button class="button-1">item 1</button>
 <button>item 2</button>
 </body>
 </html>
