--- a/index.html
+++ b/index.html
@@ -5,21 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Projeto 3B</title>
+    <title>Meus objetivos do ano</title>
 </head>
 <body>
-<header>
-    <h1 class="tit-1">Projeto 1</h1>
- <ul>
-    <li class="it-1">Item 1</li>
-    <li>Item 2</li>
-    <li>Item 3</li>
-  </ul>
-    <h2 class="tit-2">Projeto 2</h2>
-    <h3>Projeto 3</h3>
-    <h4>Projeto 4</h4>
-</header>
-<button class="button-1">item 1</button>
-<button>item 2</button>
+  <section class="conteudo-principal">
+    <h2 class="titulo-principal">Título principal</h2>
+    <div class="conteudo">
+      <div class="botoes">
+        <button class="botao ativo"> Aba 1</button>
+        <button class="botao">Aba 2</button>
+        <button class="botao">Aba 3</button>
+        <button class="botao">Aba 4</button>
+      </div>
+      <div class="abas-textos">
+      <div class="aba-conteudo ativo">
+        <h3 class="aba-conteudo-titulo-principal">Titulo da aba 1</h3>
+        <div class="contador"></div>
+      </div>
+      <div class="aba-conteudo">
+        <h3 class="aba-conteudo-titulo-principal">Titulo da aba 2</h3>
+        <div class="contador"></div>
+      </div>
+      <div class="aba-conteudo">
+        <h3 class="aba-conteudo-titulo-principal">Titulo da aba 3</h3>
+        <div class="contador"></div>
+      </div>
+      <div class="aba-conteudo">
+        <h3 class="aba-conteudo-titulo-principal">Titulo da aba 4</h3>
+        <div class="contador"></div>
+      </div>
+   </div>
+   </div>
+       </section>
 </body>
+<script src="main.js"></script>
 </html>
+
+
+
+
+
+
+</body>
