--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         
         <div class="aba-conteudo">
-          <h3 class="aba-conteudo-titulo-principal">Titulo da aba 4</h3>
+          <h3 class="aba-conteudo-titulo-principal">comprar um carro</h3>
           <div class="contador"></div>
         </div>
       </div>
