--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <button class="botao ativo"> Aba 1</button>
         <button class="botao">Aba 2</button>
         <button class="botao">Aba 3</button>
-        <button class="botao">Aba 4</button>
+        <button class="botao">comprar um carro</button>
       </div>
 
 
