--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2 class="titulo-principal">Título principal</h2>
     <div class="conteudo">
       <div class="botoes">
-        <button class="botao ativo"> Aba 1</button>
+        <button class="botao ativo"> se formar</button>
         <button class="botao">Aba 2</button>
         <button class="botao">Aba 3</button>
         <button class="botao">comprar um carro</button>
